--- a/index.html
+++ b/index.html
@@ -3,33 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>regala_Interactive</title>
+    <title>FARMFARMFARM</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
     <script src="sketch.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f5f5dc;
-        }
-        h1 {
-            color: #333;
-        }
-        .instructions {
-            width: 80%;
-            max-width: 600px;
-            margin: 20px auto;
-            padding: 15px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-            text-align: left;
-        }
-        .controls {
-            font-weight: bold;
-            color: #444;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
