--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <h1>FARM FARM FARM</h1>
     <div class="instructions">
         <h2>How to Play</h2>
-        <p>Welcome to your interactive farming experience! Follow these steps to grow and harvest crops:</p>
-
         <h3>🎮 Controls:</h3>
         <ul>
             <li><span class="controls">WASD</span> - Move the player.</li>
@@ -26,7 +24,7 @@
         <ol>
             <li>Click on a farmland plot to <b>plant seeds</b>.</li>
             <li>Once all plots are planted, click the <b>water drop</b> to <b>water them</b>.</li>
-            <li>After watering, an <b>arrow will point to the house</b> - go inside!</li>
+            <li>After a hard day of farming, sleep in the house</b> -- go inside NOW!</li>
             <li>Stand at the door and press <b>S</b> to sleep.</li>
             <li>After the required days, crops will become <b>ready to harvest</b>.</li>
             <li>Click on the crops to <b>harvest them</b>!</li>
