--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
     <div class="instructions">
         <h2>How to Play</h2>
         <h3>🎮 Controls:</h3>
-        <ul>
-            <li><span class="controls">WASD</span> - Move the player.</li>
-            <li><span class="controls">Mouse Click</span> - Interact with the farm.</li>
-            <li><span class="controls">S (at the door)</span> - Sleep to advance time.</li>
-        </ul>
+        <p><span class="controls">WASD</span> - Move the player.<br>
+            <span class="controls">Mouse Click</span> - Interact with the farm.<br>
+            <span class="controls">S (at the door)</span> - Sleep to advance time.</p>            
 
         <h3>🌱 Gameplay Steps:</h3>
         <ol>
